--- a/styles.css
+++ b/styles.css
@@ -38,35 +38,30 @@ section h2 {
 .blocks {
     width: 5vw;
     height: 10vh;
-    animation: animate 2s var(--duration) ease forwards;
     z-index: var(--z);
+    background-image: url("./image.png");
+    background-size: 100vw auto;
+    border-top: 1px solid;
+    border-left: 1px solid;
+    opacity: 0;
+    animation: animate 2s var(--duration) ease forwards;
 }
 
 .banner.active .blocks {
-    background-image: url("./image.png");
-    background-size: 100vw auto;
     background-position: right calc(calc(var(--x) * 5vw) + 4vw) bottom calc(var(--y) * 10vh);
     opacity: 1;
-    border-top: 1px solid #710c19;
-    border-left: 1px solid #710c19;
-    transform: translateZ(0);
     z-index: calc(8 - var(--z));
     animation: animate2 2s var(--duration) ease forwards;
 }
 
 @keyframes animate {
     0% {
-        opacity: 0;
         transform: translateZ(500px);
     }
 
     100% {
-        background-image: url("./image.png");
-        background-size: 100vw auto;
         background-position: right calc(calc(var(--x) * 5vw) + 4vw) bottom calc(var(--y) * 10vh);
         opacity: 1;
-        border-top: 1px solid #710c19;
-        border-left: 1px solid #710c19;
         transform: translateZ(0);
     }
 }
