--- a/styles.css
+++ b/styles.css
@@ -38,21 +38,21 @@ section h2 {
 .blocks {
     width: 5vw;
     height: 10vh;
+    animation: animate 2s var(--duration) ease forwards;
     z-index: var(--z);
     background-image: url("./image.png");
-    background-size: 100vw auto;
-    border-top: 1px solid;
-    border-left: 1px solid;
     opacity: 0;
-    animation: animate 2s var(--duration) ease forwards;
 }
 
 .banner.active .blocks {
+    background-image: url("./image.png");
+    background-size: 100vw auto;
     background-position: right calc(calc(var(--x) * 5vw) + 4vw) bottom calc(var(--y) * 10vh);
     opacity: 1;
+    transform: translateZ(0);
+    border-top: 1px solid #710c19;
+    border-left: 1px solid #710c19;
     z-index: calc(8 - var(--z));
-    border-top-color: #710c19;
-    border-left-color: #710c19;
     animation: animate2 2s var(--duration) ease forwards;
 }
 
@@ -62,11 +62,12 @@ section h2 {
     }
 
     100% {
+        background-size: 100vw auto;
         background-position: right calc(calc(var(--x) * 5vw) + 4vw) bottom calc(var(--y) * 10vh);
         opacity: 1;
+        border-top: 1px solid #710c19;
+        border-left: 1px solid #710c19;
         transform: translateZ(0);
-        border-top-color: #710c19;
-        border-left-color: #710c19;
     }
 }
 
